--- a/views/includes/footer.ejs
+++ b/views/includes/footer.ejs
@@ -1,9 +1,9 @@
 <footer>
     <div class="f-info">
         <div class="f-info-socials">
-            <a href="https://www.instagram.com/rijwan_khnn/" style="color: inherit;"><i class="fa-brands fa-square-instagram"></i></a>
-            <a href="https://www.linkedin.com/in/rizwan-khan-640417247" style="color: inherit;"><i class="fa-brands fa-linkedin"></i></a>
-            <a href="https://github.com/rijwanrk" style="color: inherit;"><i class="fa-brands fa-square-github"></i></a>
+            <a href="https://www.instagram.com//7shivam.thakur" style="color: inherit;"><i class="fa-brands fa-square-instagram"></i></a>
+            <a href="https://www.linkedin.com/in/shivam-thakur-7a2208318" style="color: inherit;"><i class="fa-brands fa-linkedin"></i></a>
+            <a href="https://github.com/shivamThakur-12" style="color: inherit;"><i class="fa-brands fa-square-github"></i></a>
         </div>
         <div class="f-info-brand">&copy; Restsphere Private Limited</div>
         <div class="f-info-links">
